fix broken layout for very small devices

--- a/style.css
+++ b/style.css
@@ -84,12 +84,12 @@ margin-block-start: 0;
 }
 
 h1 {
-    font-size: 3rem;
-    line-height: 3.5rem;
+    font-size: 2.2rem;
+    line-height: 2.5rem;
 }
 h2 {
-    font-size: 2.5rem;
-    line-height: 2.9rem;
+    font-size: 2rem;
+    line-height: 2.2rem;
 }
 h3 {
     font-size: 1.5rem;
@@ -270,6 +270,7 @@ img {
 /* tables design */
 
 .table-responsive {
+    max-width: 260px;
     overflow-x: auto;
 }
 
@@ -293,9 +294,12 @@ th {
 .card {
     /* border-radius: 0 40px 40px 40px; */
     max-width: 100%;
-    box-shadow: 0px 5px 15px 2px var(--dropdown-shadow-black);
     height: 100%;
     background: var(--accent-color);
+    transition: all 200ms ease-in-out;
+}
+.card:hover {
+    box-shadow: 0px 5px 15px 2px var(--dropdown-shadow-black);
 }
 .card-header {
     background: var(--background-primary);
@@ -436,9 +440,31 @@ footer p {
 /**********************/
 /* mediaqueries */
 /**********************/
+@media screen and (min-width: 576px) {
+    
+    /*typo*/
+    h1 {
+        font-size: 2.8rem;
+        line-height: 3.3rem;
+    }
+    h2 {
+        font-size: 2.5rem;
+        line-height: 2.9rem;
+    }
+    h3 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    /*table adjustement*/
+    .table-responsive {
+        max-width: 100%;
+    }
+}
 
 @media screen and (min-width: 768px) {
     /*general*/
+    
     .row {
         justify-content: space-between;        
     }
